--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,5 +8,22 @@
 // - Pages
 // - Thèmes
 
-@import"./utils/variables";
-@import"./layout/form";
+@import "./utils/variables";
+@import "./utils/functions";
+@import "./utils/mixins";
+@import "./utils/extensions";
+
+@import "./base/base";
+@import "./base/typography";
+
+@import "./components/buttons";
+
+@import "./layout/header";
+@import "./layout/nav";
+@import "./layout/container";
+@import "./layout/form";
+
+
+@import "./pages/work";
+@import "./pages/about";
+@import "./pages/project";
